// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render feature 1`] = `
<div
  class="flex flex-row items-start gap-2"
  data-testid="1"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check text-primary/80 w-7 self-start"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
  <div
    class="flex flex-col"
  >
    <h6
      class="text-sm font-bold"
    >
      Гарантия
    </h6>
    <p
      class="text-foreground/80 text-sm"
    >
      На все виды работ — фиксируем условия заранее.
    </p>
  </div>
</div>
`;

exports[`should render feature 2`] = `
<div
  class="flex flex-row items-start gap-2"
  data-testid="2"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check text-primary/80 w-7 self-start"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
  <div
    class="flex flex-col"
  >
    <h6
      class="text-sm font-bold"
    >
      Материалы
    </h6>
    <p
      class="text-foreground/80 text-sm"
    >
      Плёнки и решения от проверенных производителей.
    </p>
  </div>
</div>
`;

exports[`should render feature 3`] = `
<div
  class="flex flex-row items-start gap-2"
  data-testid="3"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check text-primary/80 w-7 self-start"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
  <div
    class="flex flex-col"
  >
    <h6
      class="text-sm font-bold"
    >
      Сроки
    </h6>
    <p
      class="text-foreground/80 text-sm"
    >
      Планируем время работ и предупреждаем о нюансах.
    </p>
  </div>
</div>
`;

exports[`should render feature 4`] = `
<div
  class="flex flex-row items-start gap-2"
  data-testid="4"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check text-primary/80 w-7 self-start"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
  <div
    class="flex flex-col"
  >
    <h6
      class="text-sm font-bold"
    >
      Честный выбор
    </h6>
    <p
      class="text-foreground/80 text-sm"
    >
      Оригинал / аналог — аргументируем разницу.
    </p>
  </div>
</div>
`;

exports[`should render feature 5`] = `
<div
  class="flex flex-row items-start gap-2"
  data-testid="5"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check text-primary/80 w-7 self-start"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
  <div
    class="flex flex-col"
  >
    <h6
      class="text-sm font-bold"
    >
      Большой опыт
    </h6>
    <p
      class="text-foreground/80 text-sm"
    >
      Замена, ремонт, оклейка — “рутина”, а не эксперимент.
    </p>
  </div>
</div>
`;

exports[`should render feature 6`] = `
<div
  class="flex flex-row items-start gap-2"
  data-testid="6"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check text-primary/80 w-7 self-start"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
  <div
    class="flex flex-col"
  >
    <h6
      class="text-sm font-bold"
    >
      Любые марки авто
    </h6>
    <p
      class="text-foreground/80 text-sm"
    >
      Работаем с широким списком автомобилей.
    </p>
  </div>
</div>
`;
